# fittexxcoin-node

./: .arcconfig  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING  DISCLOSURE_POLICY.md  Dockerfile-doxygen  INSTALL.md  PackageOptions.cmake  README.md  crowdin.yml
arcanist/: .phutil_module_cache  __phutil_library_map__.php  phpcs.xml
arcanist/configuration/: ArcanistFittexxcoinNodeConfiguration.php
arcanist/linter/: CheckDocLinter.php  CheckRpcMappingsLinter.php  FormatStringLinter.php  IncludeGuardLinter.php  LocaleDependenceLinter.php  PythonFormatLinter.php  TestsLinter.php
cmake/modules/: BrewHelper.cmake  Coverage.cmake  FindBerkeleyDB.cmake  FindEvent.cmake  FindGMP.cmake  FindJemalloc.cmake  FindMiniUPnPc.cmake  FindQREncode.cmake  FindRapidcheck.cmake  FindSHLWAPI.cmake  FindZeroMQ.cmake  NSIS.template.in  Sanitizers.cmake
cmake/utils/: gen-doc-man-footer.sh.in  gen-doc-man.sh.in  gen-doc-md.sh.in  translate.sh.in
contrib/: CMakeLists.txt  README.md  extract-secp256k1.sh  fittexxcoin-cli.bash-completion  fittexxcoin-qt.pro  fittexxcoin-tx.bash-completion  fittexxcoind.bash-completion  gitian-build.py  valgrind.supp
contrib/bench/: README.md  bench_bisect.sh  bench_compare.sh  bench_compare_branch.sh  benchmark_diff.py
contrib/devtools/: CMakeLists.txt  README.md  cli-help-to-markdown.py  copyright_header.py  copyright_headers_update_or_insert.sh  fittexxcoind-exit-on-log.sh  optimize-pngs.py  poll_broadcast_txn.py  rpc-help-to-markdown.py  security-check.py  symbol-check.py  test-security-check.py
contrib/gitian/: provisioner.sh
contrib/gitian-descriptors/: gitian-linux.yml  gitian-osx.yml  gitian-win.yml
contrib/gitian-signing/: check-keys.sh  keys.txt  pubkeys.txt
contrib/init/: README.md  fittexxcoind.conf  fittexxcoind.init  fittexxcoind.openrc  fittexxcoind.openrcconf  fittexxcoind.service  org.fittexxcoin.fittexxcoind.plist
contrib/linearize/: README.md  linearize-data.py  linearize-hashes.py  linearize.cfg
contrib/macdeploy/: README.md  background.svg.cmake.in  custom_dsstore.py  detached-sig-apply.sh  detached-sig-create.sh  fancy.plist  macdeployqtplus
contrib/qos/: README.md  tc.sh
contrib/release/: github-release.sh  make-sha256sums.sh
contrib/seeds/: README.md  generate-seeds.py  makeseeds.py  nodes_chipnet.txt  nodes_main.txt  nodes_scalenet.txt  nodes_testnet3.txt  nodes_testnet4.txt  test-seeds.sh
contrib/source-control-tools/: CMakeLists.txt  automated-commits.sh  autopatch.sh
contrib/testgen/: CMakeLists.txt  README.md  base58.py  gen_asert_test_vectors.cpp  gen_base58_test_vectors.py  validate_nbits_aserti3_2d.py
contrib/zmq/: zmq_sub.py
depends/: README.md  description.md  packages.md
doc/: CMakeLists.txt  Doxyfile.cmake.in  README.md  README_osx.md  README_windows.txt  REST-interface.md  assets-attribution.md  backporting.md  bch-upgrades.md  bchn-gitlab-usage-rules-and-guidelines.md  benchmarking.md  bips.md  build-freebsd.md  build-osx.md  build-unix-alpine.md  build-unix-arch.md  build-unix-deb.md  build-unix-rpm.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  dsproof-implementation-notes.md  files.md  fittexxcoin-conf.md  functional-tests.md  fuzzing.md  getblocktemplatelight.md  gitian-building.md  gitian-signing.md  init.md  mkdocs.yml.in  ninja_targets.md  publishing-documentation.md  rapidcheck.md  reduce-traffic.md  release-notes.md  release-process.md  (+8 more)
doc/gitian-building/: gitian-building-docker.md  gitian-building-manual.md  gitian-building-setup-gitian-debian.md
doc/release-notes/: release-notes-0.3.12.md
share/: genbuild.sh
share/examples/: fittexxcoin.conf
share/pixmaps/: bitcoin128.xpm  bitcoin16.xpm  bitcoin256.xpm  bitcoin32.xpm  bitcoin64.xpm
share/qt/: Info.plist.cmake.in  extract_strings_qt.py
share/rpcauth/: rpcauth.py
src/: CMakeLists.txt  addrdb.cpp  addrdb.h  addrman.cpp  addrman.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  attributes.h  banman.cpp  banman.h  base58.cpp  base58.h  blockencodings.cpp  blockencodings.h  blockfileinfo.h  blockfilter.cpp  blockfilter.h  blockindexworkcomparator.h  blockstatus.h  blockvalidity.h  bloom.cpp  bloom.h  cashaddr.cpp  cashaddr.h  cashaddrenc.cpp  cashaddrenc.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsconstants.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  (+127 more)
src/algorithm/: algorithm.h  contains.h  (+2 more)
src/qt/locale/: CMakeLists.txt  fittexxcoin_af.ts  fittexxcoin_af_ZA.ts  fittexxcoin_ar.ts  fittexxcoin_be_BY.ts  fittexxcoin_bg.ts  fittexxcoin_bg_BG.ts  fittexxcoin_ca.ts  fittexxcoin_ca@valencia.ts  fittexxcoin_ca_ES.ts  fittexxcoin_cs.ts  fittexxcoin_cy.ts  fittexxcoin_da.ts  fittexxcoin_de.ts  fittexxcoin_el.ts  fittexxcoin_el_GR.ts  fittexxcoin_en.ts  fittexxcoin_en_GB.ts  fittexxcoin_eo.ts  fittexxcoin_es.ts  fittexxcoin_es_AR.ts  fittexxcoin_es_CL.ts  fittexxcoin_es_CO.ts  fittexxcoin_es_DO.ts  fittexxcoin_es_ES.ts  fittexxcoin_es_MX.ts  fittexxcoin_es_UY.ts  fittexxcoin_es_VE.ts  fittexxcoin_et.ts  fittexxcoin_et_EE.ts  fittexxcoin_eu_ES.ts  fittexxcoin_fa.ts  fittexxcoin_fa_IR.ts  fittexxcoin_fi.ts  fittexxcoin_fr.ts  fittexxcoin_fr_CA.ts  fittexxcoin_fr_FR.ts  fittexxcoin_gl.ts  fittexxcoin_he.ts  fittexxcoin_hi_IN.ts  (+46 more)
src/qt/test/: CMakeLists.txt  addressbooktests.cpp  addressbooktests.h  apptests.cpp  apptests.h  compattests.cpp  compattests.h  fittexxcoinaddressvalidatortests.cpp  fittexxcoinaddressvalidatortests.h  guiutiltests.cpp  guiutiltests.h  paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  rpcnestedtests.cpp  rpcnestedtests.h  test_main.cpp  uritests.cpp  uritests.h  util.cpp  util.h  wallettests.cpp  wallettests.h
src/seeder/: CMakeLists.txt  README.md  db.cpp  db.h  dns.cpp  dns.h  fittexxcoin.cpp  fittexxcoin.h  main.cpp  util.h
src/seeder/test/: CMakeLists.txt  dns_util.h  p2p_messaging_tests.cpp  parse_name_tests.cpp  util.h  write_name_tests.cpp
test/: CMakeLists.txt  config.ini.cmake.in
(+811 files in other folders)
